# desafio_01_acelera

./: README.md  elt_3.py  main.py  pipeline.py  pyproject.toml
data/: dados_invalidos.csv  dados_validos.csv  kpis.json
src/: etl.py
src/controller/: controllers.py
src/database/: db.py  db_models.py
src/schemas/: schema.py
